welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:8: error: '=>' expected but 'case' found.
  case "L"
  ^